RESOLVED FIXED85609
[EFL] media/video-poster-blocked-by-willsendrequest.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=85609
Summary [EFL] media/video-poster-blocked-by-willsendrequest.html is flaky
Chris Dumez
Reported 2012-05-04 05:21:55 PDT
The media/video-poster-blocked-by-willsendrequest.html test is flaky on the EFL build bot. It appears the flakyness is caused by media/crash-closing-page-with-media-as-plugin-fallback.html: This succeeds: ./Tools/Scripts/run-webkit-tests --efl -p media/video-poster-blocked-by-willsendrequest.html But this willl cause media/video-poster-blocked-by-willsendrequest.html to fail: ./Tools/Scripts/run-webkit-tests --efl -p LayoutTests/media/crash-closing-page-with-media-as-plugin-fallback.html media/video-poster-blocked-by-willsendrequest.html
Attachments
Patch (1.40 KB, patch)
2012-05-04 06:38 PDT, Chris Dumez
no flags
Patch (1.77 KB, patch)
2012-05-04 06:50 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-05-04 05:24:05 PDT
This is related to the poster parameter of the video tag because the following removes flakyness: diff --git a/LayoutTests/media/resources/video-with-poster-as-object-fallback.html b/LayoutTests/media/resources/video-with-poster-as-object-fallback.html index 7f6983b..b64bcfd 100644 --- a/LayoutTests/media/resources/video-with-poster-as-object-fallback.html +++ b/LayoutTests/media/resources/video-with-poster-as-object-fallback.html @@ -1,7 +1,7 @@ <script src="../media-file.js"></script> <body onload="opener.childLoaded()"> <object height="500" width="500"> -<video id="theVideo" controls="controls" poster="../content/abe.png" preload="auto"> +<video id="theVideo" controls="controls" preload="auto"> </video> <script> document.getElementById("theVideo").src = findMediaFile('video', '../content/counting');
Chris Dumez
Comment 2 2012-05-04 05:28:52 PDT
Same flakyness seems to happen on Lion (Bug 82976)
Chris Dumez
Comment 3 2012-05-04 06:38:12 PDT
Created attachment 140212 [details] Patch The issue was caused by the fact that media/crash-closing-page-with-media-as-plugin-fallback.html and media/video-poster-blocked-by-willsendrequest.html use the same PNG file as poster attribute in the video tag. The PNG file gets cached when the first test is executed and this somehow causes the second test to fail. I addressed this by clearing the caches between the tests in DumpRenderTreeChrome::resetDefaultsToConsistentValues(). The tests are no longer flaky.
Raphael Kubo da Costa (:rakuco)
Comment 4 2012-05-04 06:41:42 PDT
Comment on attachment 140212 [details] Patch Looks good!
Raphael Kubo da Costa (:rakuco)
Comment 5 2012-05-04 06:42:11 PDT
BTW, it'd be awesome if you could add the explanation in comment #3 to the ChangeLog.
Chris Dumez
Comment 6 2012-05-04 06:50:49 PDT
Created attachment 140214 [details] Patch Update changelog as advised.
Simon Hausmann
Comment 7 2012-05-07 04:20:00 PDT
Comment on attachment 140214 [details] Patch rs=me
WebKit Review Bot
Comment 8 2012-05-07 04:25:52 PDT
Comment on attachment 140214 [details] Patch Clearing flags on attachment: 140214 Committed r116296: <http://trac.webkit.org/changeset/116296>
WebKit Review Bot
Comment 9 2012-05-07 04:26:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.